platform - blade toolbar redesign (in progress)
Former-commit-id: 68709bb573c7f877cc0cfec2747610f354efef2d

--- a/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/category-detail.tpl.html
+++ b/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/category-detail.tpl.html
@@ -4,6 +4,15 @@
             <form name="detailForm" class="form">
                 <fieldset ng-init="setForm(detailForm);">
                     <div>
+                        <label class="form-label">Is active</label>
+                        <div class="form-input">
+                            <label class="form-label __switch">
+                                <input type="checkbox" ng-model="blade.currentEntity.isActive" />
+                                <span class="switch"></span>
+                            </label>
+                        </div>
+                    </div>
+                    <div class="form-group">
                         <label class="form-label">Name</label>
                         <div class="form-input">
                             <input focus-on="" required class="form-control" ng-model="blade.currentEntity.name" placeholder="Enter category name" />
