--- a/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/property-dictionary.tpl.html
+++ b/PLATFORM/Modules/Catalog/VirtoCommerce.CatalogModule.Web/Scripts/blades/property-dictionary.tpl.html
@@ -83,7 +83,7 @@
                                     </label>
                                 </td>
                                 <td class="table-col">
-                                    <div ng-repeat="data in group.values | orderBy:'languageCode'">
+                                    <div ng-repeat="data in group.values | orderBy:'languageCode'" style="margin:5px 0;">
                                         <span class="flag flag-{{data.languageCode.substr(3, 2).toLowerCase()}}"></span>
                                         {{data.value}}
                                     </div>
