--- a/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/paymentMethod-detail.tpl.html
+++ b/PLATFORM/Modules/Store/VirtoCommerce.StoreModule.Web/Scripts/blades/paymentMethod-detail.tpl.html
@@ -2,6 +2,15 @@
 <div class="blade-content">
     <div class="blade-inner">
         <div class="inner-block clearfix">
+            <div class="form-group">
+                <label class="form-label">Is active</label>
+                <div class="form-input">
+                    <label class="form-label __switch">
+                        <input type="checkbox" ng-model="blade.currentEntity.isActive" />
+                        <span class="switch"></span>
+                    </label>
+                </div>
+            </div>
             <div class="columns">
                 <div class="column">
                     <ul class="list __info">
