--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/common/security/blades/account-api.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/common/security/blades/account-api.tpl.html
@@ -3,9 +3,16 @@
     <div class="blade-inner">
         <div class="inner-block form">
             <div class="form-group">
-                <label class="form-label">
-                    Key name
-                </label>
+                <label class="form-label">Is active</label>
+                <div class="form-input">
+                    <label class="form-label __switch">
+                        <input type="checkbox" ng-model="blade.currentEntity.isActive" />
+                        <span class="switch"></span>
+                    </label>
+                </div>
+            </div>
+            <div class="form-group">
+                <label class="form-label">Key name</label>
                 <div class="form-input">
                     <input ng-model="blade.currentEntity.name" placeholder="Enter name" focus-on>
                 </div>
