--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/common/security/blades/account-detail.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/common/security/blades/account-detail.tpl.html
@@ -2,7 +2,20 @@
     <div class="blade-inner">
         <div class="inner-block clearfix">
             <div class="t __divider">User information</div>
+            <div class="form-group">
+                <label class="form-label">Is administrator</label>
+                <div class="form-input">
+                    <label class="form-label __switch">
+                        <input type="checkbox" ng-model="blade.currentEntity.userType" ng-true-value="'Administrator'" ng-false-value="'SiteAdministrator'" />
+                        <span class="switch"></span>
+                    </label>
+                </div>
+            </div>
             <ul class="list __info">
+                <li class="list-item">
+                    <div class="list-t">Account type</div>
+                    <div class="list-descr">{{blade.currentEntity.userType}}</div>
+                </li>
                 <li class="list-item">
                     <div class="list-t">Login</div>
                     <div class="list-descr">{{blade.currentEntity.userName}}</div>
@@ -10,10 +23,6 @@
                 <li class="list-item">
                     <div class="list-t">Account state</div>
                     <div class="list-descr">{{blade.currentEntity.userState}}</div>
-                </li>
-                <li class="list-item">
-                    <div class="list-t">Account type</div>
-                    <div class="list-descr">{{blade.currentEntity.userType}}</div>
                 </li>
             </ul>
             <va-widget-container group="accountDetail" blade="blade" gridster-opts="{width: 396}"></va-widget-container>
