--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/blades/dynamicProperty-detail.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/blades/dynamicProperty-detail.tpl.html
@@ -1,15 +1,46 @@
-﻿<div class="blade-static __bottom" ng-include="'Scripts/common/templates/ok-cancel2.tpl.html'"></div>
+﻿<div class="blade-static __bottom" ng-include="'Scripts/common/templates/create.tpl.html'" ng-if="blade.isNew"></div>
 <div class="blade-content">
     <div class="blade-inner">
         <div class="inner-block">
-            <form name="pdForm" class="form">
-                <div ng-init="setForm(pdForm);">
+            <form name="formScope" class="form">
+                <div ng-init="setForm(formScope)">
                     <label class="form-label" for="">Property name</label>
                     <div class="form-input">
                         <input focus-on="" required class="form-control" ng-model="blade.currentEntity.name" />
                     </div>
                 </div>
                 <div class="form-group">
+                    <div class="form-control __checkbox">
+                        <label class="form-label">
+                            <input type="checkbox" ng-model="blade.currentEntity.isRequired">
+                            <span class="check"></span>
+                            <span class="name">Required</span>
+                        </label>
+                    </div>
+                    <div class="form-control __checkbox">
+                        <label class="form-label">
+                            <input type="checkbox" ng-model="blade.currentEntity.isArray">
+                            <span class="check"></span>
+                            <span class="name">Multivalue</span>
+                        </label>
+                    </div>
+                    <div class="form-control __checkbox" ng-class="{'__disabled': !blade.isNew}">
+                        <label class="form-label">
+                            <input type="checkbox" ng-model="blade.currentEntity.isMultilingual">
+                            <span class="check"></span>
+                            <span class="name">Multi language</span>
+                        </label>
+                    </div>
+                    <div class="form-control __checkbox" ng-class="{'__disabled': !blade.isNew}">
+                        <label class="form-label">
+                            <input type="checkbox" ng-model="blade.currentEntity.isDictionary" ui-validate=" 'dictFlagValidator($value)' " ui-validate-watch=" 'blade.currentEntity.valueType' " name="dictFlag">
+                            <span class="check"></span>
+                            <span class="name">Dictionary</span>
+                        </label>
+                    </div>
+                    <div class="error" ng-if="formScope.dictFlag.$invalid">Only dictionaries of value type ShortText are supported.</div>
+                </div>
+                <div class="form-group" ng-if="blade.currentEntity.isMultilingual">
                     <label class="form-label" for="">Display name</label>
                     <div class="form-input __langs" ng-repeat="data in blade.currentEntity.displayNames">
                         <span class="flag flag-{{data.locale.substr(3).toLowerCase()}}"></span>
@@ -18,45 +49,15 @@
                 </div>
             </form>
 
-            <div class="form">
-                <div class="form-control __checkbox">
-                    <label class="form-label">
-                        <input type="checkbox" ng-model="blade.currentEntity.isRequired">
-                        <span class="check"></span>
-                        <span class="name">Required</span>
-                    </label>
-                </div>
-                <div class="form-control __checkbox">
-                    <label class="form-label">
-                        <input type="checkbox" ng-model="blade.currentEntity.isDictionary">
-                        <span class="check"></span>
-                        <span class="name">Dictionary</span>
-                    </label>
-                </div>
-                <div class="form-control __checkbox">
-                    <label class="form-label">
-                        <input type="checkbox" ng-model="blade.currentEntity.isArray">
-                        <span class="check"></span>
-                        <span class="name">Multivalue</span>
-                    </label>
-                </div>
-                <div class="form-control __checkbox">
-                    <label class="form-label">
-                        <input type="checkbox" ng-model="blade.currentEntity.isMultilingual">
-                        <span class="check"></span>
-                        <span class="name">Multi language</span>
-                    </label>
-                </div>
-            </div>
-
             <ul class="list __items">
-                <li class="list-item" ng-class="{'__selected': currentChild === 'valType'}" ng-click='openChild("valType")'>
+                <li class="list-item" ng-class="{'__selected': currentChild === 'valType', '__disabled': !blade.isNew}" ng-click='openChild("valType")'>
                     <span class="list-t">Value Type</span>
                     <span class="list-descr">{{blade.currentEntity.valueType}}</span>
                 </li>
-                <li class="list-item" ng-class="{'__selected': currentChild === 'dict', '__disabled': !blade.currentEntity.dictionary }" ng-click='openChild("dict")'>
-                    <span class="list-t">Dictionary</span>
-                    <span class="list-descr">Manage dictionary</span>
+                <li class="list-item" ng-class="{'__selected': currentChild === 'dict', '__disabled': !blade.currentEntity.isDictionary || blade.isNew}" ng-click='openChild("dict")'>
+                    <span class="list-t">Dictionary values</span>
+                    <span class="list-descr" ng-if="blade.currentEntity.isDictionary && !blade.isNew">Manage dictionary</span>
+                    <div class="error" ng-if="blade.currentEntity.isDictionary && blade.isNew">Create property before managing dictionary values</div>
                 </li>
             </ul>
         </div>
