--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/widgets/dynamicPropertyWidget.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/widgets/dynamicPropertyWidget.tpl.html
@@ -1,6 +1,6 @@
 ﻿<div class="gridster-cnt" ng-click="openBlade()">
     <div class="cnt-inner">
         <div class="list-count">{{blade.currentEntity.dynamicPropertyValues.length}}</div>
-        <div class="list-t">Dynamic Properties</div>
+        <div class="list-t">Dynamic properties</div>
     </div>
 </div>
