--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/blades/dynamicProperty-list.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/blades/dynamicProperty-list.tpl.html
@@ -10,7 +10,7 @@
         <div class="inner-block">
             <div class="text" ng-if="blade.currentEntities.length == 0">No dynamic properties yet.</div>
             <ul class="list __items" ng-if="blade.currentEntities.length > 0">
-                <li class="list-item" ng-repeat="data in blade.currentEntities | filter:searchText | orderBy: 'name' track by data.name" ng-class="{'__selected': data.name === selectedNodeId}" ng-click='selectNode(data)'>
+                <li class="list-item" ng-repeat="data in blade.currentEntities | filter:searchText | orderBy: 'name' track by data.id" ng-class="{'__selected': data.id === selectedNodeId}" ng-click='selectNode(data)'>
                     <span class="list-t">{{data.name}}</span>
                 </li>
             </ul>
