--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/blades/propertyValue-list.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/blades/propertyValue-list.tpl.html
@@ -4,7 +4,7 @@
         <div class="inner-block">
             <form name="formScope" class="form">
                 <fieldset ng-init="setForm(formScope);">
-                    <div class="form-group" ng-repeat="prop in blade.currentEntities as properties">
+                    <div class="form-group" ng-repeat="prop in blade.currentEntities | orderBy: 'property.name' as properties">
                         <label class="form-label" for="">
                             {{prop.property.name}}
                             <!--<a href="" ng-click="editProperty(prop)" va-permission="platform:dynamic_properties:manage"><i class="form-ico fa fa-pencil"></i></a>-->
