--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/directives/dynamicProperty.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/directives/dynamicProperty.tpl.html
@@ -3,22 +3,17 @@
 
     <script type="text/ng-template" id="dShortText.html">
         <div class="form-input">
-            <input ng-disabled="currentEntity.isReadOnly"
-                   ng-required="currentEntity.required && !currentEntity.isReadOnly"
+            <input ng-required="currentEntity.property.isRequired"
                    ng-model="context.currentPropValues[0].value"
-                   name="{{currentEntity.valueType}}"
-                   placeholder="Please enter short text"
-                   type="text">
+                   placeholder="Enter short text">
         </div>
     </script>
 
     <script type="text/ng-template" id="dLongText.html">
         <div class="form-input">
-            <textarea ng-disabled="currentEntity.isReadOnly"
-                      ng-required="currentEntity.required && !currentEntity.isReadOnly"
+            <textarea ng-required="currentEntity.property.isRequired"
                       ng-model="context.currentPropValues[0].value"
-                      name="{{currentEntity.valueType}}"
-                      placeholder="Please enter long text"></textarea>
+                      placeholder="Enter long text"></textarea>
         </div>
     </script>
 
@@ -36,19 +31,17 @@
             <input va-number step="0.01"
                    ng-required="currentEntity.property.isRequired"
                    ng-model="context.currentPropValues[0].value"
-                   placeholder="Enter decimal number" />            
-        </div>    
+                   placeholder="Enter decimal number" />
+        </div>
     </script>
 
     <script type="text/ng-template" id="dDateTime.html">
         <div class="form-input __calendar">
-            <input type="text"
-                   datepicker-popup="shortDate"
-                   close-text="Close"
-                   datepicker-options="dateOptions"
-                   min-date="today"
+            <input ng-model="context.currentPropValues[0].value"
+                   datepicker-popup
                    is-open="datepickers.DateTime"
-                   ng-model="context.currentPropValues[0].value">
+                   placeholder="Choose date"
+                   close-text="Close">
             <button ng-click="open($event, 'DateTime')" type="button" class="btn">
                 <i class="btn-ico fa fa-calendar"></i>
             </button>
@@ -64,30 +57,36 @@
 
     <script type="text/ng-template" id="dShortText-multivalue.html">
         <tags-input ng-model="context.currentPropValues"
-                    ng-disabled="currentEntity.isReadOnly"
-                    min-tags="{{(currentEntity.required && !currentEntity.isReadOnly) ? 1 : undefined}}"
+                    min-tags="{{currentEntity.property.isRequired ? 1 : undefined}}"
                     add-on-blur="false"
-                    name="{{currentEntity.valueType}}"
                     display-property="value"
                     placeholder="Add value">
         </tags-input>
     </script>
-    <script type="text/ng-template" id="dNumber-multivalue.html">
+    <script type="text/ng-template" id="dInteger-multivalue.html">
         <tags-input ng-model="context.currentPropValues"
-                    ng-disabled="currentEntity.isReadOnly"
-                    min-tags="{{(currentEntity.required && !currentEntity.isReadOnly) ? 1 : undefined}}"
+                    min-tags="{{currentEntity.property.isRequired ? 1 : undefined}}"
+                    add-on-blur="false"
+                    allowed-tags-pattern="^[-]?[0-9]*$"
+                    min-length="1"
+                    display-property="value"
+                    placeholder="Add integer">
+        </tags-input>
+    </script>
+    <script type="text/ng-template" id="dDecimal-multivalue.html">
+        <tags-input ng-model="context.currentPropValues"
+                    min-tags="{{currentEntity.property.isRequired ? 1 : undefined}}"
                     add-on-blur="false"
                     allowed-tags-pattern="^[-]?[0-9]+[\.]?[0-9]*$"
                     min-length="1"
-                    name="{{currentEntity.valueType}}"
                     display-property="value"
-                    placeholder="Add number">
+                    placeholder="Add decimal">
         </tags-input>
     </script>
 
     <script type="text/ng-template" id="dShortText-dictionary.html">
         <div class="form-input">
-            <ui-select ng-model="context.currentPropValues[0]" ng-disabled="currentEntity.isReadOnly">
+            <ui-select ng-model="context.currentPropValues[0]">
                 <ui-select-match placeholder="Select value">{{$select.selected.value}}</ui-select-match>
                 <ui-select-choices repeat="propValue in context.allDictionaryValues | filter: {value: $select.search}">
                     <span ng-bind-html="propValue.value | highlight: $select.search"></span>
@@ -99,7 +98,7 @@
 
     <script type="text/ng-template" id="dShortText-dictionary-multivalue.html">
         <div class="form-input">
-            <ui-select multiple ng-model="context.currentPropValues" ng-disabled="currentEntity.isReadOnly">
+            <ui-select multiple ng-model="context.currentPropValues">
                 <ui-select-match placeholder="Select value">{{$item.value}}</ui-select-match>
                 <ui-select-choices repeat="propValue in context.allDictionaryValues | filter: {value: $select.search}">
                     <span ng-bind-html="propValue.value | highlight: $select.search"></span>
@@ -108,28 +107,34 @@
         </div>
     </script>
 
-
-    <script type="text/ng-template" id="dShortText-multilang.html">
+    <!--<script type="text/ng-template" id="dShortText-multilang.html">
         <div class="form-group" ng-repeat="(language, langValuesGroup) in context.langValuesMap">
             <div class="form-input __langs">
                 <span class="flag flag-{{language.substr(3).toLowerCase()}}"></span>
-                <input ng-disabled="currentEntity.isReadOnly"
-                       ng-required="currentEntity.required && !currentEntity.isReadOnly"
+                <input ng-required="currentEntity.property.isRequired"
                        ng-model="langValuesGroup.currentPropValues[0].value"
-                       name="{{currentEntity.valueType}}"
-                       placeholder="Please enter value"
-                       type="text">
+                       placeholder="Enter value">
+            </div>
+        </div>
+    </script>-->
+    <script type="text/ng-template" id="dShortText-multilang.html">
+        <div class="form-group" ng-repeat="propValue in context.currentPropValues">
+            <div class="form-input __langs">
+                <span class="flag flag-{{propValue.locale.substr(3).toLowerCase()}}"></span>
+                <input ng-required="currentEntity.property.isRequired"
+                       ng-model="propValue.values[0].value"
+                       placeholder="Enter value">
             </div>
         </div>
     </script>
+
     <script type="text/ng-template" id="dLongText-multilang.html">
-        <div class="form-group" ng-repeat="(language, langValuesGroup) in context.langValuesMap">
+        <div class="form-group" ng-repeat="propValue in context.currentPropValues">
             <div class="form-input __langs">
-                <span class="flag flag-{{language.substr(3).toLowerCase()}}"></span>
-                <textarea ng-disabled="currentEntity.isReadOnly"
-                          ng-required="currentEntity.required && !currentEntity.isReadOnly"
-                          ng-model="langValuesGroup.currentPropValues[0].value"
-                          name="{{currentEntity.valueType}}" />
+                <span class="flag flag-{{propValue.locale.substr(3).toLowerCase()}}"></span>
+                <textarea ng-required="currentEntity.property.isRequired"
+                          ng-model="propValue.values[0].value"
+                          placeholder="Enter value" />
             </div>
         </div>
     </script>
@@ -140,10 +145,8 @@
             <div class="form-input __langs">
                 <span class="flag flag-{{language.substr(3).toLowerCase()}}"></span>
                 <tags-input ng-model="langValuesGroup.currentPropValues"
-                            ng-disabled="currentEntity.isReadOnly"
-                            min-tags="{{(currentEntity.required && !currentEntity.isReadOnly) ? 1 : undefined}}"
+                            min-tags="{{currentEntity.property.isRequired ? 1 : undefined}}"
                             add-on-blur="false"
-                            name="{{currentEntity.valueType}}"
                             display-property="value"
                             placeholder="Add value">
                 </tags-input>
@@ -155,17 +158,17 @@
         <div class="form-group">
             <div class="form-input __langs" data-role="input-control">
                 <span class="flag flag-{{currentEntity.catalog.defaultLanguage.languageCode.substr(3).toLowerCase()}}"></span>
-                <ui-select ng-model="context.langValuesMap[currentEntity.catalog.defaultLanguage.languageCode].currentPropValues[0]" ng-disabled="currentEntity.isReadOnly">
+                <ui-select ng-model="context.langValuesMap[currentEntity.catalog.defaultLanguage.languageCode].currentPropValues[0]">
                     <ui-select-match placeholder="Select value">{{$select.selected.value}}</ui-select-match>
                     <ui-select-choices repeat="propValue in context.langValuesMap[currentEntity.catalog.defaultLanguage.languageCode].allValues | filter: {value: $select.search}">
                         <span ng-bind-html="propValue.value | highlight: $select.search"></span>
                     </ui-select-choices>
                 </ui-select>
             </div>
-            <div ng-repeat="data in currentEntity.values | filter: {languageCode:'!'+currentEntity.catalog.defaultLanguage.languageCode}" style="margin:5px 0;">
+            <!--<div ng-repeat="data in currentEntity.values | filter: {languageCode:'!'+currentEntity.catalog.defaultLanguage.languageCode}" style="margin:5px 0;">
                 <span class="flag flag-{{data.languageCode.substr(3, 2).toLowerCase()}}"></span>
                 {{data.value}}
-            </div>
+            </div>-->
         </div>
     </script>
 
@@ -173,7 +176,7 @@
         <div class="form-group" ng-repeat="(language, langValuesGroup) in context.langValuesMap">
             <div class="form-input __langs">
                 <span class="flag flag-{{language.substr(3).toLowerCase()}}"></span>
-                <ui-select multiple ng-model="langValuesGroup.currentPropValues" ng-disabled="currentEntity.isReadOnly">
+                <ui-select multiple ng-model="langValuesGroup.currentPropValues">
                     <ui-select-match placeholder="Select value">{{$item.value}}</ui-select-match>
                     <ui-select-choices repeat="langValuesGroup in langValuesGroup.allValues | filter: {value: $select.search}">
                         <span ng-bind-html="langValuesGroup.value | highlight: $select.search"></span>
@@ -186,20 +189,17 @@
 
     <!--<script type="text/ng-template" id="numberPropType.html">
         <input ng-if="!currentEntity.multivalue"
-               ng-disabled="currentEntity.isReadOnly"
                class="form-control"
                ng-model="currentEntity.values[0].value"
                type="number"
-               name="{{currentEntity.valueType}}"
                placeholder="enter number"
-               ng-required="currentEntity.required && !currentEntity.isReadOnly" />
+               ng-required="currentEntity.property.isRequired" />
 
-        <tags-input ng-if="currentEntity.multivalue && currentEntity.isReadOnly"
+        <tags-input ng-if="currentEntity.multivalue"
                     ng-model="currentEntity.values"
                     allowed-tags-pattern="^[-]?[0-9]+[\.]?[0-9]*$"
                     min-length="1"
                     add-on-blur="false"
-                    name="{{currentEntity.valueType}}"
                     display-property="value"
                     placeholder="enter number">
 
@@ -208,23 +208,16 @@
         <script type="text/ng-template" id="longTextPropType.html">
         <span ng-repeat="val in currentEntity.values track by $index">
             <textarea ng-if="currentEntity.multivalue || $index == 0"
-                      ng-disabled="currentEntity.isReadOnly"
                       class="form-control"
                       ng-model="val.value"
-                      name="{{currentEntity.valueType}}"
-                      ng-required="currentEntity.required && !currentEntity.isReadOnly" />
+                      ng-required="currentEntity.property.isRequired" />
             <a ng-if="currentEntity.multivalue && $index > 0" ng-click="currentEntity.values.splice(currentEntity.values.indexOf(val.value),1)">remove</a>
         </span>
-        <a ng-if="currentEntity.multivalue && !currentEntity.isReadOnly" ng-click="currentEntity.values.push({value:''})" style="cursor:pointer;">add value</a>
+        <a ng-if="currentEntity.multivalue" ng-click="currentEntity.values.push({value:''})" style="cursor:pointer;">add value</a>
     </script>-->
-
     <!--<div class="form-input" ng-if="prop.valueType === 'ShortText'">
-        <input ng-model="prop.value" required class="form-control" placeholder="Enter value" />
-    </div>
-
-    <div class="form-input" ng-if="prop.valueType === 'LongText'">
-        <textarea ng-model="prop.value" class="form-control"></textarea>
-    </div>
+            <input ng-model="prop.value" required class="form-control" placeholder="Enter value" />
+        </div>
 
     <div class="form-input" ng-if="prop.valueType === 'Decimal'">
         <input money ng-model="prop.value" placeholder="Enter number">
@@ -235,10 +228,6 @@
         <button class="btn" type="button" ng-click="open($event,'str')">
             <i class="btn-ico fa fa-calendar"></i>
         </button>
-    </div>
-    <label class="form-label __switch" ng-if="prop.valueType === 'Boolean'">
-        <input type="checkbox" ng-model="prop.value">
-        <span class="switch"></span>
-    </label>-->
+    </div>-->
 
 </div>
