--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/directives/dynamicProperty.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/directives/dynamicProperty.tpl.html
@@ -145,33 +145,29 @@
 
     <script type="text/ng-template" id="dShortText-dictionary-multilang.html">
         <div class="form-group">
-            <div class="form-input __langs" data-role="input-control">
-                <span class="flag flag-{{currentEntity.catalog.defaultLanguage.languageCode.substr(3).toLowerCase()}}"></span>
-                <ui-select ng-model="context.langValuesMap[currentEntity.catalog.defaultLanguage.languageCode].currentPropValues[0]">
+            <div class="form-input">
+                <ui-select ng-model="context.currentPropValues[0]">
                     <ui-select-match placeholder="Select value">{{$select.selected.value}}</ui-select-match>
-                    <ui-select-choices repeat="propValue in context.langValuesMap[currentEntity.catalog.defaultLanguage.languageCode].allValues | filter: {value: $select.search}">
+                    <ui-select-choices repeat="propValue in context.allDictionaryValues | filter: {value: $select.search}">
                         <span ng-bind-html="propValue.value | highlight: $select.search"></span>
                     </ui-select-choices>
                 </ui-select>
             </div>
-            <!--<div ng-repeat="data in currentEntity.values | filter: {languageCode:'!'+currentEntity.catalog.defaultLanguage.languageCode}" style="margin:5px 0;">
-                <span class="flag flag-{{data.languageCode.substr(3, 2).toLowerCase()}}"></span>
-                {{data.value}}
-            </div>-->
+            <div ng-repeat="data in context.currentPropValues[0].displayNames" style="margin:5px 0;">
+                <span class="flag flag-{{data.locale.substr(3, 2).toLowerCase()}}"></span>
+                {{data.name}}
+            </div>
         </div>
     </script>
 
     <script type="text/ng-template" id="dShortText-dictionary-multivalue-multilang.html">
-        <div class="form-group" ng-repeat="(language, langValuesGroup) in context.langValuesMap">
-            <div class="form-input __langs">
-                <span class="flag flag-{{language.substr(3).toLowerCase()}}"></span>
-                <ui-select multiple ng-model="langValuesGroup.currentPropValues">
-                    <ui-select-match placeholder="Select value">{{$item.value}}</ui-select-match>
-                    <ui-select-choices repeat="langValuesGroup in langValuesGroup.allValues | filter: {value: $select.search}">
-                        <span ng-bind-html="langValuesGroup.value | highlight: $select.search"></span>
-                    </ui-select-choices>
-                </ui-select>
-            </div>
+        <div class="form-input">
+            <ui-select multiple ng-model="context.currentPropValues">
+                <ui-select-match placeholder="Select value">{{$item.value}}</ui-select-match>
+                <ui-select-choices repeat="propValue in context.allDictionaryValues | filter: {value: $select.search}">
+                    <span ng-bind-html="propValue.value | highlight: $select.search"></span>
+                </ui-select-choices>
+            </ui-select>
         </div>
     </script>
 </div>
