--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/blades/dynamicProperty-detail.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/blades/dynamicProperty-detail.tpl.html
@@ -42,7 +42,7 @@
                     </div>
                     <div class="error" ng-if="formScope.dictFlag.$invalid">Only dictionaries of value type ShortText are supported.</div>
                 </div>
-                <div class="form-group" ng-if="blade.currentEntity.isMultilingual">
+                <div class="form-group">
                     <label class="form-label" for="">Display name</label>
                     <div class="form-input __langs" ng-repeat="data in blade.currentEntity.displayNames">
                         <span class="flag flag-{{data.locale.substr(3).toLowerCase()}}"></span>
