--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/blades/propertyValue-list.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/blades/propertyValue-list.tpl.html
@@ -4,15 +4,15 @@
         <div class="inner-block">
             <form name="formScope" class="form">
                 <fieldset ng-init="setForm(formScope);">
-                    <div class="form-group" ng-repeat="prop in blade.currentEntities | orderBy: 'property.name' as properties">
+                    <div class="form-group" ng-repeat="property in blade.currentEntity.dynamicProperties | orderBy: 'name'">
                         <label class="form-label" for="">
-                            {{prop.property.name}}
-                            <!--<a href="" ng-click="editProperty(prop)" va-permission="platform:dynamic_properties:manage"><i class="form-ico fa fa-pencil"></i></a>-->
+                            {{property.name}}
+                            <a href="" ng-click="editDictionary(property)" ng-show="property.isDictionary"><i class="form-ico fa fa-pencil"></i></a>
                         </label>
-                        <va-dynamic-property ng-model="prop" />
+                        <va-dynamic-property ng-model="property" languages="languages" />
                     </div>
 
-                    <div class="text" ng-if="properties.length == 0">None</div>
+                    <div class="text" ng-if="blade.currentEntity.dynamicProperties.length == 0">None</div>
                 </fieldset>
             </form>
         </div>
