Fix dynamic properties bugs
Former-commit-id: 415dfb5dc836eaf5d296c9a3f4c55d6db7c919f0

--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/directives/dynamicProperty.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/directives/dynamicProperty.tpl.html
@@ -57,6 +57,7 @@
 
     <script type="text/ng-template" id="dShortText-multivalue.html">
         <tags-input ng-model="context.currentPropValues"
+                    min-length="1"
                     min-tags="{{currentEntity.property.isRequired ? 1 : undefined}}"
                     add-on-blur="false"
                     display-property="value"
@@ -99,7 +100,7 @@
     <script type="text/ng-template" id="dShortText-dictionary-multivalue.html">
         <div class="form-input">
             <ui-select multiple ng-model="context.currentPropValues">
-                <ui-select-match placeholder="Select value">{{$item.value}}</ui-select-match>
+                <ui-select-match placeholder="Select value">{{$item.name}}</ui-select-match>
                 <ui-select-choices repeat="propValue in context.allDictionaryValues | filter: {name: $select.search}">
                     <span ng-bind-html="propValue.name | highlight: $select.search"></span>
                 </ui-select-choices>
