--- a/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/blades/dynamicProperty-list.tpl.html
+++ b/PLATFORM/VirtoCommerce.Platform.Web/Scripts/app/dynamicProperties/blades/dynamicProperty-list.tpl.html
@@ -1,17 +1,11 @@
-﻿<div class="blade-static">
-    <div class="form-group">
-        <div class="form-input __search">
-            <input placeholder="Search keyword..." ng-model="searchText">
-        </div>
-    </div>
-</div>
-<div class="blade-content">
+﻿<div class="blade-content">
     <div class="blade-inner">
         <div class="inner-block">
             <div class="text" ng-if="blade.currentEntities.length == 0">No dynamic properties yet.</div>
             <ul class="list __items" ng-if="blade.currentEntities.length > 0">
                 <li class="list-item" ng-repeat="data in blade.currentEntities | filter:searchText | orderBy: 'name' track by data.id" ng-class="{'__selected': data.id === selectedNodeId}" ng-click='selectNode(data)'>
                     <span class="list-t">{{data.name}}</span>
+                    <span class="list-descr">{{data.valueType + (data.isRequired ? ' required' : '') + (data.isDictionary ? ' dictionary' : '') + (data.isArray ? ' multivalue' :  '') + (data.isMultilingual ? ' multilingual' : '') }}</span>
                 </li>
             </ul>
         </div>
